# pelicad-specklepy

./: .gitignore  pyproject.toml
specklepy_shared/resources/: automation_resource.py  extended_model_resource.py
