[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "specklepy_shared"
version = "0.0.2"
authors = [
  { name="Sebastian Witt", email="witt@pelicad.com" },
]
description = "shared code to interact with the speckle backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  'specklepy>=3.0.0'
]
